--- a/index.html
+++ b/index.html
@@ -572,8 +572,8 @@
           <div class="chip"><i class="fas fa-map-pin"></i> Hanoi, Vietnam</div>
           <div class="chip">
             <i class="fas fa-globe"></i>
-            <a href="https://tranquan.vercel.app" target="_blank"
-              >tranquan.vercel.app</a
+            <a href="https://website-cv-tranquan.vercel.app" target="_blank"
+              >https://website-cv-tranquan.vercel.app</a
             >
           </div>
         </div>
